--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "@hono/node-server": "^1.11.4",
+    "@hono/zod-validator": "^0.2.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "hono": "^4.4.8",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "start": "node .",
