--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "nodemon": "^3.1.4",
+    "redis": "^4.6.14",
     "zod": "^3.23.8"
   },
   "scripts": {
