--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,20 @@
   "dependencies": {
     "@hono/node-server": "^1.11.4",
     "@hono/zod-validator": "^0.2.2",
+    "@types/node": "^20.14.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "hono": "^4.4.8",
-    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.7.0",
     "nodemon": "^3.1.4",
     "redis": "^4.6.14",
+    "typescript": "^5.5.2",
     "zod": "^3.23.8"
   },
   "scripts": {
     "start": "node .",
+    "build": "tsc",
     "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
