--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "dependencies": {
     "@hono/node-server": "^1.11.4",
     "@hono/zod-validator": "^0.2.2",
+    "@prisma/client": "^5.16.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -13,6 +18,7 @@
     "hono": "^4.4.8",
     "mongodb": "^6.7.0",
     "nodemon": "^3.1.4",
+    "prisma": "^5.16.1",
     "redis": "^4.6.14",
     "typescript": "^5.5.2",
     "zod": "^3.23.8"
@@ -21,6 +27,7 @@
     "start": "node .",
     "build": "tsc",
     "dev": "nodemon .",
+    "prisma:migrate": "prisma generate & prisma db push",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "iamEvanYT",
