chore: update import part of files

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "outDir": "./dist", // Specify the output folder for compiled JavaScript
-      "allowJs": true,
-      "moduleResolution": "nodenext",
-      "module": "NodeNext"
-    },
+			"target": "ES6",
+			"outDir": "./dist", // Specify the output folder for compiled JavaScript
+			"allowJs": true,
+			"moduleResolution": "nodenext",
+			"module": "NodeNext",
+			"baseUrl": "./",
+			"paths": {
+				"src/*": ["./src/*"]
+			}
+		},
     "exclude": ["node_modules", "dist"]
   }
