--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -59,6 +59,8 @@ build/Release
 node_modules/
 jspm_packages/
 
+package-lock.json
+
 # Snowpack dependency directory (https://snowpack.dev/)
 
 web_modules/
