--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,25 @@
-ARG NODE_VERSION=18.0.0
+ARG NODE_VERSION=18
 
 # Compile to JavaScript
-FROM node as builder
+FROM node:${NODE_VERSION} as builder
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 COPY . .
+RUN npm run prisma:generate
+# Build TypeScript files
 RUN npm run build
+# Copy all non-TypeScript files to dist
+RUN find . -type f ! -name "*.ts" ! -path "./node_modules/*" ! -path "./dist/*" -exec cp --parents {} dist \;
 
 # Build Image
 FROM node:${NODE_VERSION}-alpine
 USER node
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install
-RUN npm run prisma:migrate
-COPY --from=builder /usr/src/app/dist ./dist
+RUN npm install --only=production
+COPY --from=builder /usr/src/app/dist ./
+COPY --from=builder /usr/src/app/node_modules/.prisma ./node_modules/.prisma
+ENV NODE_ENV production
 EXPOSE 8080
-CMD [ "node", "dist/index.js" ]
+CMD ["node", "index.js"]
