--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "prisma": {
-    "schema": "prisma/schema.prisma"
+    "schema": "./prisma/schema.prisma"
   },
   "dependencies": {
     "@hono/node-server": "^1.11.4",
@@ -19,7 +19,7 @@
     "mongodb": "^6.7.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "prisma": "^5.16.1",
+    "prisma": "5.16.1",
     "redis": "^4.6.14",
     "typescript": "^5.5.2",
     "zod": "^3.23.8"
@@ -28,7 +28,8 @@
     "start": "node .",
     "build": "tsc",
     "dev": "nodemon .",
-    "prisma:migrate": "prisma generate & prisma db push",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma db push",
     "prisma:format": "prisma format",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
