--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@hono/node-server": "^1.11.4",
     "@hono/zod-validator": "^0.2.2",
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "5.16.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.14.9",
     "bcrypt": "^5.1.1",
@@ -19,7 +19,7 @@
     "mongodb": "^6.7.0",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "prisma": "5.16.1",
+    "prisma": "^5.16.2",
     "redis": "^4.6.14",
     "typescript": "^5.5.2",
     "zod": "^3.23.8"
