feat: watch for code changes and restart

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
 ARG NODE_VERSION=18
+ARG NODE_ENV=production
 
 # Compile to JavaScript
 FROM node:${NODE_VERSION} as builder
@@ -17,9 +18,16 @@ FROM node:${NODE_VERSION}-alpine
 USER node
 WORKDIR /usr/src/app
 COPY package*.json ./
-RUN npm install --only=production
+
+RUN if [ "$NODE_ENV" = "production" ]; then \
+        npm install --only=production; \
+    else \
+        npm install; \
+    fi
+
 COPY --from=builder /usr/src/app/dist ./
 COPY --from=builder /usr/src/app/node_modules/.prisma ./node_modules/.prisma
-ENV NODE_ENV production
+ENV NODE_ENV ${NODE_ENV}
 EXPOSE 8080
+
 CMD ["node", "index.js"]
