--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "hono": "^4.4.8",
     "mongodb": "^6.7.0",
     "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4",
     "prisma": "^5.16.2",
     "redis": "^4.6.14",
     "typescript": "^5.5.2",
@@ -28,6 +27,7 @@
     "start": "node .",
     "build": "tsc",
     "dev": "nodemon .",
+    "watch": "node dev.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma db push",
     "prisma:format": "prisma format",
@@ -36,6 +36,8 @@
   "author": "iamEvanYT",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^3.1.4",
+    "chokidar": "^3.6.0",
     "@types/nodemailer": "^6.4.15"
   }
 }
